mp-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviepilot-service
  namespace: frps
spec:
  type: ClusterIP
  selector:
    app: frps
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviepilot-ingress
  namespace: frps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mp.tt829.cn
      secretName: moviepilot-tls
  rules:
    - host: mp.tt829.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moviepilot-service
                port:
                  number: 80
